# docs/swagger.json
@@ -1,20 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Swagger API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "basePath": "/api/v1",
     "paths": {
         "/relation/": {
             "get": {
@@ -488,6 +476,9 @@
                 "collect_condition": {
                     "$ref": "#/definitions/domain.CollectCondition"
                 },
+                "max_depth": {
+                    "type": "integer"
+                },
                 "search_condition": {
                     "$ref": "#/definitions/domain.SearchCondition"
                 },
@@ -536,6 +527,9 @@
             "properties": {
                 "collect_condition": {
                     "$ref": "#/definitions/domain.CollectCondition"
+                },
+                "max_depth": {
+                    "type": "integer"
                 },
                 "object": {
                     "$ref": "#/definitions/domain.Node"
@@ -669,14 +663,5 @@
                 }
             }
         }
-    },
-    "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
-        }
-    },
-    "externalDocs": {
-        "description": "OpenAPI",
-        "url": "https://swagger.io/resources/open-api/"
     }
 }
